fix desgin and relative divition

--- a/admin-dashboard/manager_dashboard.html
+++ b/admin-dashboard/manager_dashboard.html
@@ -457,6 +457,11 @@
             font-size: 0.9rem;
         }
 
+        .task-date {
+            color: #b45309;
+            font-size: 0.9rem;
+        }
+
         .categorization-options {
             display: flex;
             flex-wrap: wrap;
