--- a/homepage.html
+++ b/homepage.html
@@ -1983,7 +1983,7 @@
             <div class="total-display"><strong>סה"כ ימים: <span id="total-days">0</span></strong></div>
         </div>
         <div class="form-group" style="margin-top: 20px;">
-            <label for="personal-notes"><span class="material-symbols-outlined" style="vertical-align: middle; margin-left: 4px; color: #6b7280;">edit_note</span>הערות לעצמי:</label>
+            <label for="personal-notes"><span class="material-symbols-outlined" style="vertical-align: middle; margin-left: 4px; color: #6b7280;">edit_note</span>הערות לעצמי (לא משותף עם המנהל/ת):</label>
             <textarea id="personal-notes" placeholder="הערות אישיות לדיווח זה (אופציונלי)..." rows="3" style="width: 100%; resize: vertical; padding: 10px; border: 1px solid #ddd; border-radius: 8px; font-family: inherit; direction: rtl;"></textarea>
         </div>
         <button class="btn" onclick="submitReport()">שמירת דיווח</button>
